# skywalker

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  build_config.mk  build_detect_platform  build_travis.sh
checkpoint/: checkpoint_manager.cc  checkpoint_manager.h  checkpoint_receiver.cc  checkpoint_receiver.h  checkpoint_sender.cc  checkpoint_sender.h  log_cleaner.cc  log_cleaner.h  log_replayer.cc  log_replayer.h
cmake/: Dependencies.cmake  Protobuf.cmake  Targets.cmake
cmake/Modules/: FindLevelDB.cmake  FindSnappy.cmake  FindTCMalloc.cmake  FindVoyager.cmake
examples/echo/: CMakeLists.txt  echo.cc
examples/journey/: .Makefile.swp  .journey.pb.cc.swp  .journey.pb.h.swo  .journey_client.cc.swp  .journey_service_impl.h.swp  .rpc.proto.swp  .rpc_channel.cc.swp  .rpc_channel.h.swp  .rpc_codec.cc.swp  .rpc_codec.h.swp  .rpc_server.cc.swp  .rpc_server.h.swp  CMakeLists.txt  Makefile  build_config.mk  build_detect_platform  checkpoint_impl.h  core  journey.h  journey.proto  journey_client  journey_client.cc  journey_db.cc  journey_db.h  journey_db_machine.cc  journey_db_machine.h  journey_server  journey_server.cc  journey_service_impl.cc  journey_service_impl.h  rpc.proto  rpc_channel.cc  rpc_channel.h  rpc_codec.cc  rpc_codec.h  rpc_server.cc  rpc_server.h
include/skywalker/: .status.h.swp  checkpoint.h  cluster.h  file.h  logging.h  node.h  node_util.h  nodeinfo.h  options.h  slice.h  state_machine.h  status.h
log/: checkpoint.cc  checkpoint_manager.cc  checkpoint_manager.h  checkpoint_receiver.cc  checkpoint_receiver.h  checkpoint_sender.cc  checkpoint_sender.h  log_cleaner.cc  log_cleaner.h  log_manager.cc  log_manager.h
machine/: .inside_machine.cc.swp  inside_machine.cc  inside_machine.h  machine_manager.cc  machine_manager.h  master_machine.cc  master_machine.h  membership_machine.cc  membership_machine.h  state_machine.cc  state_machine_factory.cc  state_machine_factory.h  state_machine_impl.cc  state_machine_impl.h
network/: messager.cc  messager.h  network.cc  network.h
out-shared/: libskywalker.dylib.1  libskywalker.dylib.1.2
out-static/: paxos_bench  paxos_test
paxos/: .acceptor.cc.swp  .config.cc.swp  .group.cc.swp  .group.h.swp  .instance.cc.swp  .instance.h.swp  .proposer.h.swp  CMakeLists.txt  acceptor.cc  acceptor.h  ballot_number.h  checkpoint_manager.cc  checkpoint_manager.h  config.cc  config.h  counter.cc  counter.h  group.cc  group.h  instance.cc  instance.h  learner.cc  learner.h  node_impl.cc  node_impl.h  node_util.cc  node_util.h  nodeinfo.cc  paxos.pb.cc  paxos.pb.h  paxos.proto  paxos_bench.cc  paxos_test.cc  propose_queue.cc  propose_queue.h  proposer.cc  proposer.h  runloop.cc  runloop.h  schedule.cc  (+12 more)
paxos/test/: CMakeLists.txt  checkpoint_impl.h  paxos_test.cc
paxos/tests/: CMakeLists.txt  paxos_test.cc
proto/: paxos.pb.cc  paxos.pb.h  paxos.proto
storage/: db.cc  db.h  multi_db.cc  multi_db.h  write_batch.cc  write_batch.h
test/test1/: build.sh
test/test2/: build.sh
test/test3/: build.sh
util/: .status.cc.swp  callback.h  coding.h  crc32c.cc  crc32c.h  file.cc  file.h  logger.h  logging.cc  mutex.cc  mutex.h  mutexlock.h  options.cc  random.h  runloop.cc  runloop.h  runloop_thread.cc  runloop_thread.h  sequence_number.h  status.cc  thread.cc  thread.h  timeops.cc  timeops.h  timerlist.cc  timerlist.h
